# doutorado

./: .gitignore  README.md  TODO  Taskfile.yml  bla.md  notes.excalidraw
LATEX/: TODO.md
LATEX_tese/: tese.aux  tese.bbl  tese.blg  tese.dvi  tese.fdb_latexmk  tese.fls  tese.lof  tese.lot  tese.out  tese.tex  tese.toc
apresentacao/: .gitignore
arduino/: Com.m  README.md  Taskfile.yml  ble_connect.m  blink_matlabcode.m  blink_matlabcode_2.m  guibt.m  guibt_2.m  play.m  python_blue.py  remote.m  remote_2.m  remote_bt.m  remote_bt2.m  remote_rb.m  send_command_bt.m  send_signal_bt.m  send_signal_bt_raw.m  sketch_arduino.ino  sketch_arduino_2.ino  z_matlab_connect.m  z_matlab_connect.py
comentarios/: 10.1007_s40313-020-00667-9-citation.ris
docs/: embedded-overview.html  index.html  latex-overview.html  reveal.esm.js.map  simu2-overview.html  tese-analyzes.html
documentos/: acompanhamento.md
embedded/: README.md
embedded/esp32_idf/sandbox/test_control/: CMakeLists.txt  Taskfile.yml
embedded/esp32_idf/sandbox/test_control/.zed/: settings.json
embedded/esp32_idf/sandbox/test_control/docs/: analysis-report.md  prompt_test.md  react-compiler.md  zustand-selectors.md
embedded/esp32_idf/sandbox/test_control/include/: control.h
embedded/esp32_idf/sandbox/test_control/src/: control.cpp  main.cpp
plan/: QualiDanielVieira.docx
play/: optim_lagrange.m  play.m
projecao/: Projecao.m  create_projection.m  determina_oinf.m  projecao_integrador_duplo.m  projecao_patino1.m  projecao_patino2.m  save_figure.m  test.m  teste_redundancia.m
simu2/: .gitignore  bla.m  (+48 more)
(+1072 files in other folders)
